# documentation-helper

./: ingestion.py  main.py  pyproject.toml
.claude/logs/: subagent-history.jsonl
.claude/memory/: session-log.md
.claude/sessions/: .last_inbox_check  active.json
.claude/state/: runtime-reactive.jsonl  session-map.json  session-skills-used.json  session.events.jsonl  session.json  tool-failure-counter.txt
.claude/state/sessions/: A1B7CC2F-D8B5-484C-AFD1-443781843151.events.jsonl  A1B7CC2F-D8B5-484C-AFD1-443781843151.json  B0080A37-78E2-41AF-AEF0-FF33BADD3535.events.jsonl  B0080A37-78E2-41AF-AEF0-FF33BADD3535.json  C2BF6D3D-D9DA-4E5A-9B4D-C7120C422B22.events.jsonl  C2BF6D3D-D9DA-4E5A-9B4D-C7120C422B22.json
backend/: core.py
