[project]
name = "documentation-helper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.5.20",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-openai>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
